mise à jour numéros téléphones

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>
           Salle Gaby et Jean Thomas, 10 rue des écoles, 42170 Saint Just-Saint Rambert
           <br>
-          Téléphone : 04 77 36 70 72
+          Téléphone : 06 11 32 60 31 (Jérémy Vial) ou 06 99 69 12 90 (Alexandre Tardy)
           <br>
           Fax : 04 77 55 09 56
           <br>
