ajout article détection jeunes

--- a/index.html
+++ b/index.html
@@ -34,11 +34,55 @@
 
       <div class="row">
         <div class="col-md-6 col-md-offset-1">
+          <div class="article">
+          <h2>Entraînements de détection pour la saison 2014/2015</h2>
+          <p><em>Publié le 3 juin 2014</em></p>
+          <h3>U9 (nés en 2006/2007)</h3>
+          <p>Entraîneur : Alexandre TARDY (06 99 69 12 90)</p>
+          <ul>
+            <li>mercredi 4 juin : 14h30 à 16h00 à la Bonbonnière</li>
+            <li>mercredi 11 juin : 14h30 à 16h00 à la Bonbonnière</li>
+            <li>mercredi 18 juin : 14h30 à 16h00 à la Bonbonnière</li>
+          </ul>
+
+          <h3>U11 (nés en 2004/2005)</h3>
+          <ul>
+            <li>mercredi 4 juin : 13h15 à 14h30 à la Polyvalente</li>
+            <li>mercredi 11 juin : 13h15 à 14h30 à la Polyvalente</li>
+            <li>mercredi 18 juin : 13h15 à 14h30 à la Bonbonnière</li>
+          </ul>
+
+          <h3>U13 (nés en 2002/2003)</h3>
+          <p>Entraineur : Alexandre TARDY (06 99 69 12 90)</p>
+          <ul>
+            <li>mercredi 4 juin : 16h00 à 17h30 à la Bonbonnière</li>
+            <li>mercredi 11 juin : 16h00 à 17h30 à la Bonbonnière</li>
+          </ul>
+
+          <h3>U15 (2000/2001)</h3>
+          <p>Entraîneur : Jérémy Vial (06 11 32 60 31)</p>
+          <ul>
+            <li>mercredi 4 juin : 19h00 à 20h30 à la Bonbonnière</li>
+            <li>mercredi 11 juin : 19h00 à 20h30 à la Bonbonnière</li>
+          </ul>
+
+          <h3>U17 (1998/1999)</h3>
+          <p>Entraîneur : Maxime GIRARDI (06 74 35 96 08)</p>
+          <ul>
+            <li>jeudi 5 juin : 18h15 à 19h45 à la Bonbonnière</li>
+            <li>jeudi 12 juin : 18h15 à 19h45 à la Bonbonnière </li>
+          </ul>
+
+          <p>Pour plus d’informations n’hésitez pas à contacter les entraîneurs par téléphone ou par mail (la-pontoise-basket@wanadoo.fr).</p>
+          </div>
+
+          <div class="article">
           <h2>Le site revient, petit à petit</h2>
-          <p><em>Le 4 février 2014</em></p>
+          <p><em>Publié le 4 février 2014</em></p>
           <p>Après une coupure, le site de La Pontoise Basket revient avec une nouvelle adresse : <em>lapontoisebasket.fr</em>.</p>
           <p>Pour le moment il n'y a pas grand chose car nous préparons sa mise en place, mais sachez que son évolution se fera régulièrement.</p>
           <p>Nous espérons qu'il vous plaira que vous soyez joueurs, entraîneurs, dirigeants, bénévoles, partenaires, ou que vous vous intéressez simplement à notre club.</p>
+          </div>
         </div>
 
         <div class="col-md-4">
