fix last article

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           </ul>
 
           <h3>U11 (nés en 2004/2005)</h3>
+          <p>Entraîneur : Jérémy VIAL (06 11 32 60 31)</p>
           <ul>
             <li>mercredi 4 juin : 13h15 à 14h30 à la Polyvalente</li>
             <li>mercredi 11 juin : 13h15 à 14h30 à la Polyvalente</li>
@@ -53,7 +54,7 @@
           </ul>
 
           <h3>U13 (nés en 2002/2003)</h3>
-          <p>Entraineur : Alexandre TARDY (06 99 69 12 90)</p>
+          <p>Entraîneur : Alexandre TARDY (06 99 69 12 90)</p>
           <ul>
             <li>mercredi 4 juin : 16h00 à 17h30 à la Bonbonnière</li>
             <li>mercredi 11 juin : 16h00 à 17h30 à la Bonbonnière</li>
